--- a/drep-inspector/package.json
+++ b/drep-inspector/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emurgo/cardano-serialization-lib-browser": "^13.2.1",
     "bech32": "^2.0.0",
+    "bech32-buffer": "^0.2.1",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
